--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="logo">
             <a href="#home">
-           <img src="logo.jpg" alt="shadow logo"></a>
+           <img src="logo.jpg" alt="logo"></a>
         
            <p class="logo-text">Ranjeet</p>
            
@@ -75,3 +75,4 @@
 </body>
 
 </html>
+
